syntax = "proto3";

option go_package = "proto/user";
//komanda za pokretanje  protoc --go_out=./user --go_opt=paths=source_relative \
//    --go-grpc_out=./user --go-grpc_opt=paths=source_relative \
 //    user_service.proto

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc UpsertUser(UpsertUserRequest) returns (UpsertUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message User {
    int32 Id = 1;
    string username=2;
    string password=3;
    enum UserRole {
        Administrator = 0;
        Author = 1;
        Tourist = 2;
    };
    UserRole Role = 4;
    bool IsActive = 5;
    string Email = 6;
    string VerificationToken=7;
    bool IsVerified=8;
}



message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
   User user = 1;
}

message UpsertUserRequest {
    User user = 1;
}

message UpsertUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    int32 id = 1;
}

message DeleteUserResponse {
}